Prepare phase one release deployment
